@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+socket/info.c: Fix stack smashing in magic_mapping_mark() on maps wider than 50
+  tiles.
+Arvid Norlander 2009-01-24
+
 test/unit/common/check_item.c: Fix failing regression test.
 Andreas Kirschbaum 2009-01-24
 
